Changed Contact.cshtml,_Layout.cshtml by Hima

--- a/BookDonation.Web/Views/Home/Contact.cshtml
+++ b/BookDonation.Web/Views/Home/Contact.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "RED TEAM BOOK DONATION SYSTEM";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+@ViewBag.Message
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    2415 WoodLand Ave<br />
+    Cleveland, OH, 44115<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    216.987.3030
 </address>
 
 <address>
