--- a/BookDonation.Web/Views/Home/About.cshtml
+++ b/BookDonation.Web/Views/Home/About.cshtml
@@ -5,3 +5,4 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+We are dedicated to improving the reading culture of the members of the community by increasing their access to books.
