--- a/BookDonation.Web/Views/Home/Index.cshtml
+++ b/BookDonation.Web/Views/Home/Index.cshtml
@@ -1,31 +1,66 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>
+@{
+    ViewBag.Title = "Index";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h2>Index</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<p>
+    @Html.ActionLink("Donate New Book", "DonateBook", null, new { @class = "btn btn-primary" })
+</p>
+
+<br />
+<table class="table" style="width: 1200px;">
+    <tr>
+
+        <th>
+            <b>GenreId</b>
+        </th>
+        <th>
+            <b>AuthorId</b>
+        </th>
+        <th>
+            <b>Title</b>
+        </th>
+        <th>
+            <b>ISBN</b>
+        </th>
+        <th>
+            <b>NumBookDonated</b>
+        </th>
+        <th>
+            <b>Image</b>
+        </th>
+        
+    </tr>
+    
+    @foreach (var item in Model)
+    {
+    <tr>
+
+
+        <td>
+            @Html.DisplayFor(modelItem => item.GenreId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AuthorId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ISBN)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NumBookDonated)
+        </td>
+        <td>
+            <img src="/Home/RetrieveImage/@item.Id" alt="" height=50 width=50 />
+        </td>
+
+        
+    </tr>
+    }
+</table>
+
+
