--- a/BookDonation.Web/Views/Home/RequestABook.cshtml
+++ b/BookDonation.Web/Views/Home/RequestABook.cshtml
@@ -16,11 +16,11 @@
         <h4>Books</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-       
+
         <div class="form-group">
-            @Html.LabelFor(model => model.GenreId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.GenreId, "GenreId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GenreId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("GenreId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GenreId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -49,19 +49,88 @@
             </div>
         </div>
 
- 
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="RequestABook" class="btn btn-default" />
+                @*<input type="submit" value="RequestABook" class="btn btn-default" />*@
+                <input type="button" value="RequestABook" onclick="location.href='@Url.Action("Index","Books",new { id = Model.Id })'" />
             </div>
         </div>
+
+
+
     </div>
 }
 
 <div>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+
+OR:
+
+
+
+@*@{
+        ViewBag.Title = "Request A Book"; (LIST OF BOOKS IN DATABASE)
+    }
+
+    <h2>Request A Book</h2>
+
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Genres.Name)
+            </th>
+    <th>
+                @Html.DisplayNameFor(model => model.Authors.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.ISBN)
+            </th>
+            <th></th>
+        </tr>
+
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genres.Name)
+            </td>
+    <td>
+                @Html.DisplayFor(modelItem => item.Authors.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                @Html.ActionLink("Cart", "Cart", new { id = item.Id }) |
+            </td>
+        </tr>
+    }
+
+    </table>*@
+
+
+
+
+
+
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -75,6 +144,6 @@
 
 
 @*<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>**@
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>**@
