--- a/BookDonation.Web/Views/Shared/_Layout.cshtml
+++ b/BookDonation.Web/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink( "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink( "Report", "Index", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
 
                     <li>@Html.ActionLink("Request a Book", "RequestBook", "Home")</li>
                     <li>@Html.ActionLink("Donate a Book", "DonateBook", "Home")</li>
