--- a/BookDonation.Web/Views/Books/Create.cshtml
+++ b/BookDonation.Web/Views/Books/Create.cshtml
@@ -26,6 +26,11 @@
 <div class="form-horizontal">
     <h4>Books</h4>
     <hr />
+@*<p>
+    @Html.ActionLink("Donate New Book", "DonateBook", null, new { @class = "btn btn-primary" })
+</p>*@
+
+<br />
     @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
