--- a/BookDonation.Web/Views/Home/RequestABook.cshtml
+++ b/BookDonation.Web/Views/Home/RequestABook.cshtml
@@ -1,149 +1,66 @@
-﻿@model BookDonation.DB.Models.Books
-
-
+﻿@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>
 @{
     ViewBag.Title = "Request A Book";
 }
 
-<h2>Request A Book</h2>
+<h2>Index of Available Books</h2>
+
+<table class="table" style="width: 1200px;">
+    <tr>
+
+        <th>
+            <b>GenreId</b>
+        </th>
+        <th>
+            <b>AuthorId</b>
+        </th>
+        <th>
+            <b>Title</b>
+        </th>
+        <th>
+            <b>ISBN</b>
+        </th>
+        @*<th>
+            <b>NumBookDonated</b>
+        </th>*@
+        <th>
+            <b>Image</b>
+        </th>
+
+    </tr>
+
+    @foreach (var item in Model)
+    {
+    <tr>
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+        <td>
+            @Html.DisplayFor(modelItem => item.GenreId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AuthorId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ISBN)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NumBookDonated)
+        </td>
+        <td>
+            <img src="/Home/RetrieveImage/@item.Id" alt="" height=50 width=50 />
+        </td>
 
-    <div class="form-horizontal">
-        <h4>Books</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.GenreId, "GenreId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("GenreId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.GenreId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AuthorId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AuthorId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AuthorId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ISBN, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ISBN, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ISBN, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <td>
+            
+            @Html.ActionLink("Cart", "Cart", new { id = item.Id }) 
+        </td>
 
 
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                @*<input type="submit" value="RequestABook" class="btn btn-default" />*@
-                <input type="button" value="RequestABook" onclick="location.href='@Url.Action("Index","Books",new { id = Model.Id })'" />
-            </div>
-        </div>
-
-
-
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-
-OR:
-
-
-
-@*@{
-        ViewBag.Title = "Request A Book"; (LIST OF BOOKS IN DATABASE)
+    </tr>
     }
-
-    <h2>Request A Book</h2>
-
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Genres.Name)
-            </th>
-    <th>
-                @Html.DisplayNameFor(model => model.Authors.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.ISBN)
-            </th>
-            <th></th>
-        </tr>
-
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genres.Name)
-            </td>
-    <td>
-                @Html.DisplayFor(modelItem => item.Authors.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.ISBN)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
-                @Html.ActionLink("Cart", "Cart", new { id = item.Id }) |
-            </td>
-        </tr>
-    }
-
-    </table>*@
+</table>
 
 
-
-
-
-
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-
-
-
-
-
-
-
-
-@*<p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>**@
