--- a/BookDonation.Web/Views/Shared/_Layout.cshtml
+++ b/BookDonation.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
 
-                    <li>@Html.ActionLink("Request a Book", "RequestBook", "Home")</li>
+                    <li>@Html.ActionLink("Request a Book", "RequestABook", "Home")</li>
                     <li>@Html.ActionLink("Donate a Book", "DonateBook", "Home")</li>
                     <li>@Html.ActionLink("Search", "Search", "Home")</li>
                     <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
