--- a/BookDonation.Web/Views/Home/Search.cshtml
+++ b/BookDonation.Web/Views/Home/Search.cshtml
@@ -1,6 +1,8 @@
 ﻿@model BookDonation.DB.Models.Books
 
 @{
+    /**/
+
     ViewBag.Title = "Search";
 }
 
@@ -11,13 +13,26 @@
 {
     //the following are search options
     <b> Search Option: </b>
-    @Html.RadioButton("option", "Title")
-    <text>Title</text>
-    @Html.RadioButton("option", "Author")
-    <text> Author </text>
+
+    @Html.RadioButton("option", "Title") <text>Title</text>
+
+    @Html.RadioButton("option", "Author") <text> Author </text>
+
     @Html.RadioButton("option", "ISBN") <text>ISBN</text>
-    @Html.TextBox("search") 
-    <input type = "submit"    
-     name = "submit"
-     value = "Search" />
+
+    @Html.LabelFor(m => m.Authors)
+    @Html.TextBoxFor(m => m.Authors)
+
+    @*<input type="submit"
+        name="submit"
+        value="Search" />*@
+
+    <input type="submit" value="Search" onclick="location.href='@Url.Action("Index","Books",new { id = Model.Id })'" />
+
+    @*<div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                @*<input type="submit" value="RequestABook" class="btn btn-default" />
+                <input type="button" value="Search" onclick="location.href='@Url.Action("Index","Books",new { id = Model.Id })'" />
+            </div>
+        </div>*@
 } 
