--- a/BookDonation.Web/Views/Home/Cart.cshtml
+++ b/BookDonation.Web/Views/Home/Cart.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>
+﻿@*@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>*@
+
+
+@model BookDonation.Web.ViewModels.DonateVM
 
 @{
     ViewBag.Title = "Cart";
@@ -8,20 +11,42 @@
 
 <h3>Are you sure you want to add this to the Cart?</h3>
 <div>
-    <h4>Books</h4>
+    <h4>Request A Book</h4>
     <hr />
     <dl class="dl-horizontal">
-
         <dt>
             @Html.DisplayNameFor(model => model.GenreId)
         </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.GenreId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AuthorId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AuthorId)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
 
-        
+        <dd>
+            @Html.DisplayFor(model => model.Title)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ISBN)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ISBN)
+        </dd>
+
 
         @*<dt>
             @Html.DisplayName("Sales Tax")
