--- a/BookDonation.Web/Views/Home/DonateSuccess.cshtml
+++ b/BookDonation.Web/Views/Home/DonateSuccess.cshtml
@@ -1,8 +1,4 @@
 ﻿@model BookDonation.Web.ViewModels.DonateVM
 
-@{
-    ViewBag.Title = "DonateSuccess";
-}
-
-<h2>DonateSuccess</h2>
-
+<h2>Thank you for donating the Book</h2>
+<h4>Your donation was greatly appreciated and will help us grow our Book Exchange system</h4>
