--- a/BookDonation.Web/Views/Shared/_Layout.cshtml
+++ b/BookDonation.Web/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink( "Report", "Index", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink( "Report", "Index", "Books",new { area = "" },new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
 
-                    <li>@Html.ActionLink("Request a Book", "RequestBook", "Home")</li>
+                    <li>@Html.ActionLink("Request a Book", "RequestABook", "Home")</li>
                     <li>@Html.ActionLink("Donate a Book", "DonateBook", "Home")</li>
                     <li>@Html.ActionLink("Search", "Search", "Home")</li>
                     <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
