Update for request book and date pick up

--- a/BookDonation.Web/Views/Books/Create.cshtml
+++ b/BookDonation.Web/Views/Books/Create.cshtml
@@ -19,7 +19,7 @@
 </script>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Books", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
