Books Image appearing

--- a/BookDonation.Web/Views/Books/Index.cshtml
+++ b/BookDonation.Web/Views/Books/Index.cshtml
@@ -56,7 +56,7 @@
             @Html.DisplayFor(modelItem => item.ISBN)
         </td>
         <td>
-           <img src="/Book/RetrieveImage/@item.Id" alt="" height=50 width=50 />
+           <img src="/Books/RetrieveImage/@item.Id" alt="" height=50 width=50 />
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.QuantityAvailable)
