--- a/BookDonation.Web/Views/Books/Edit.cshtml
+++ b/BookDonation.Web/Views/Books/Edit.cshtml
@@ -60,9 +60,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" name="ImageData" id="ImageData" onchange="fileCheck(this);" />
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
+
+               
         </div>
 
         <div class="form-group">
