book pick up due date updated

--- a/BookDonation.Web/Views/Home/Cart.cshtml
+++ b/BookDonation.Web/Views/Home/Cart.cshtml
@@ -52,7 +52,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PickUpDate)
+            @ViewBag.PickUpDueDate
         </dd>
 
         @*<dt>
