Donation Confirmation receipt

--- a/BookDonation.Web/Views/Home/Cart.cshtml
+++ b/BookDonation.Web/Views/Home/Cart.cshtml
@@ -79,7 +79,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Checkout" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", "PickUpDate")
+            @Html.ActionLink("Back to List", "Index", "Books")
         </div>
     }
 </div>
