--- a/BookDonation.Web/Views/Home/Contact.cshtml
+++ b/BookDonation.Web/Views/Home/Contact.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "RED TEAM BOOK EXCHANGE SYSTEM";
 }
-<h2>@ViewBag.Title</h2>
-@ViewBag.Message
+<h2 style="color :red">@ViewBag.Title</h2>
+<b>@ViewBag.Message</b>
 
 <address>
     2415 WoodLand Ave<br />
