--- a/BookDonation.Web/Views/Books/Index.cshtml
+++ b/BookDonation.Web/Views/Books/Index.cshtml
@@ -1,10 +1,18 @@
 ﻿@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>
 
+@*@{
+        ViewBag.Title = "Index";
+    }
+
+    <h2>Index</h2>*@
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "RED TEAM BOOK EXCHANGE SYSTEM";
 }
 
-<h2>Index</h2>
+<h2 style="color :red">@ViewBag.Title</h2>
+<h4><b>Book Inventory</b></h4>
+
 
 <p>
     @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
@@ -12,8 +20,8 @@
 <table class="table" style="width: 1200px;">
     <tr>
         @*<th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>*@
+                @Html.DisplayNameFor(model => model.UserId)
+            </th>*@
         <th>
             @Html.DisplayNameFor(model => model.GenreId)
         </th>
@@ -38,38 +46,39 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.GenreId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AuthorId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ISBN)
-        </td>
-        <td>
-           <img src="/Books/RetrieveImage/@item.Id" alt="" height=50 width=50 />
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.QuantityAvailable)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.QuantityReserved)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.UserId)
+                </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.GenreId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AuthorId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
+            </td>
+            <td>
+                <img src="/Books/RetrieveImage/@item.Id" alt="" height=50 width=50 />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.QuantityAvailable)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.QuantityReserved)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
