--- a/BookDonation.Web/Views/Home/About.cshtml
+++ b/BookDonation.Web/Views/Home/About.cshtml
@@ -1,11 +1,11 @@
 ﻿
-<h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
+@*<h2>@ViewBag.Title</h2>
+<h3>@ViewBag.Message</h3>*@
 
 
 <div class="jumbotron">
-    <h1>RED TEAM BOOK EXCHANGE SYSTEM</h1>
+    <h2 style="color :red">RED TEAM BOOK EXCHANGE SYSTEM</h2>
     <img src="\images\homepagepic.gif" width="600" heigth="150" />
-    <p class="lead">RED TEAM BOOK DONATION SYSTEM is a platform for book exchange.You can donate or request a book at this site.We are dedicated to improving the reading culture of the members of the community by increasing their access to books.</p>
-    <p>Events Calendar</p>
+    <p class="lead">RED TEAM BOOK EXCHANGE SYSTEM is a platform for book exchange.You can donate or request a book at this site.We are dedicated to improving the reading culture of the members of the community by increasing their access to books.</p>
+    @*<p>Events Calendar</p>*@
 </div>
