--- a/BookDonation.Web/Views/Home/RequestABook.cshtml
+++ b/BookDonation.Web/Views/Home/RequestABook.cshtml
@@ -1,9 +1,15 @@
 ﻿@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>
-@{
+@*@{
     ViewBag.Title = "Request A Book";
+}*@
+@{
+    ViewBag.Title = "RED TEAM BOOK EXCHANGE SYSTEM";
 }
 
-<h2>Index of Available Books</h2>
+<h2 style="color :red">@ViewBag.Title</h2>
+<h4><b>Request Book</b></h4>
+
+
 
 <table class="table" style="width: 1200px;">
     <tr>
@@ -21,8 +27,8 @@
             <b>ISBN</b>
         </th>
         @*<th>
-            <b>NumBookDonated</b>
-        </th>*@
+                <b>NumBookDonated</b>
+            </th>*@
         <th>
             <b>Image</b>
         </th>
@@ -31,35 +37,35 @@
 
     @foreach (var item in Model)
     {
-    <tr>
+        <tr>
 
 
-        <td>
-            @Html.DisplayFor(modelItem => item.GenreId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AuthorId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ISBN)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumBookDonated)
-        </td>
-        <td>
-            <img src="/Home/RetrieveImage/@item.Id" alt="" height=50 width=50 />
-        </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GenreId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AuthorId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
+            </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.NumBookDonated)
+            </td>*@
+            <td>
+                <img src="/Home/RetrieveImage/@item.Id" alt="" height=50 width=50 />
+            </td>
 
-        <td>
-            
-            @Html.ActionLink("Cart", "Cart", new { id = item.Id }) 
-        </td>
+            <td>
+
+                @Html.ActionLink("Cart", "Cart", new { id = item.Id })
+            </td>
 
 
-    </tr>
+        </tr>
     }
 </table>
 
