--- a/BookDonation.Web/Views/Home/Search.cshtml
+++ b/BookDonation.Web/Views/Home/Search.cshtml
@@ -1,13 +1,20 @@
 ﻿@model BookDonation.DB.Models.Books
 @*@model IEnumerable<BookDonation.Web.ViewModels.DonateVM>*@
 
-@{
+@*@{
     /**/
 
     ViewBag.Title = "Search";
+}*@
+
+@*<h2>Search</h2>*@
+@{
+    ViewBag.Title = "RED TEAM BOOK EXCHANGE SYSTEM";
 }
 
-<h2>Search</h2>
+<h2 style="color :red">@ViewBag.Title</h2>
+<h4><b>Search Book</b></h4>
+
 
 
 @using (Html.BeginForm("Search", "Home", FormMethod.Post))
