--- a/BookDonation.Web/Views/Home/RequestABook.cshtml
+++ b/BookDonation.Web/Views/Home/RequestABook.cshtml
@@ -9,8 +9,6 @@
 <h2 style="color :red">@ViewBag.Title</h2>
 <h4><b>Request Book</b></h4>
 
-
-
 <table class="table" style="width: 1200px;">
     <tr>
 
@@ -63,10 +61,11 @@
 
                 @Html.ActionLink("Cart", "Cart", new { id = item.Id })
             </td>
-
-
-        </tr>
+        </tr>      
     }
 </table>
+<h5><b>Request Not Found? Reserve your book.Submit BooK Details</b></h5>
+    
+
 
 
