--- a/BookDonation.Web/Views/Home/CheckOut.cshtml
+++ b/BookDonation.Web/Views/Home/CheckOut.cshtml
@@ -6,6 +6,10 @@
 <h2>Check Out</h2>
 
 <h2>Thank you for requesting a book from RED TEAM BOOK DONATION SYSTEM</h2>
+<p><b>Please pick up your book by:</b></p>
+<dd>
+    @ViewBag.PickUpDueDate
+</dd>
 @Html.ActionLink("Request Another Book", "RequestABook", "Home")
 
 @Html.ActionLink("Back to List", "Index", "PickUpDate")
