--- a/BookDonation.Web/Views/Shared/_Layout.cshtml
+++ b/BookDonation.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" >
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Home", "About", "Home")</li>
 
                     <li>@Html.ActionLink("Request a Book", "RequestABook", "Home")</li>
                     <li>@Html.ActionLink("Donate a Book", "DonateBook", "Home")</li>
